src/client/app/styles/main.css
/* BELOCAL STYLES 
-possible background colour: #EFF7EF;
-logo green: #78be25;

*/

/*NAV BAR RESPONSIVENESS*/

@media (max-width: 1100px) and (min-width: 1001px){

  .navbar-form {
    padding-left: 0px !important;
  }

  .beLocal-search {
    width:500px !important;
  }
}

@media (max-width: 768px){
  .header-container {
    padding-left: 5px;
    padding-right: 5px;
    text-align: center !important;
    float: none !important;
  }

  .search-nav-xs {
    width: 60% !important;
    float:left;
  }

  .navbar-toggle {
    margin-right:5px;
    margin-left: 5px;
    margin-bottom: 0px !import;
  }

}

@media (max-width: 1000px){
  .beLocal-search {
    width: 350px !important;
  }

  .logo-header {
    margin-top: -90px;
  }

  .logo-header img{
    width:250px !important;
  } 

}


/* END OF NAV BAR RESPONSIVENESS*/

.no-block {
  display: inline !important;
}

.search-nav-xs {
  width: 500px;
  margin-bottom: 0px !important;
}

.navbar-xs {
  height: auto !important;
  border-bottom: 3px solid #78be25 !important;
}

.navbar-brand {
  padding-top: 5px !important;
  padding-left: 5px !important;
  padding-bottom: 0px !important;
  padding-right: 5px;
}

.navbar-brand img{
  height: 35px;
}

.beLocal-search {
  width:600px;
}

.header-container {
  max-width: 1350px;
  margin-left: auto;
  margin-right: auto; 
}

.customer-container {
  margin-left: auto;
  margin-right: auto;   
  max-width: 1300px;
  padding-left: 15px;
  padding-right: 15px;
  padding-top: 15px;
  padding-bottom: 35px;
}

@media (max-width: 768px){
  .customer-container{
    padding-top: 60px !important;
  }

}

.nav-shadow {
  text-shadow: 0px 0px 5px #CFF4BF;
}

.customer-nav .active{
  text-decoration: underline;
}

.navbar {
  background-color: #FFFFFF !important;
  height: 140px;
  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.3) !important;
}

.navbar-nav > li {

}

.nav-bar-top {
  padding-bottom: 50px;
  padding-right: 10px;
}

.logo-header {
  margin-top: -100px;
}

.logo-header img{
  width:300px;
}

.customer-nav{
  height:50px;
  background-color: #78be25 !important;
}

.logo-green {
  color: #78be25 !important;
}

.first-modal-row {
  margin-bottom: 15px;
}

.medium-margin {
  margin-left: 10px;
}

.header-font {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,sans-serif;
}

.small-header {
  font-family: 'Roboto', sans-serif !important;
  color: #403E3B;
  font-size: 12px;
  letter-spacing: 1px;
  text-transform: uppercase;
  padding: 0px;
  margin-bottom: 10px;
  padding:10px;
}

.edit-location-modal-header {
  border-bottom: 0px;
  padding-bottom: 0px;
}

.plain-text-font {
  font-family: 'Roboto', sans-serif !important;
}

.center {
  text-align: center;
}

.bold-hover .a:hover {
 font-style: bolder;
} 

.plain-text {
  font-size: 15px !important;
  font-family: 'Roboto', sans-serif !important;
  color: #696969 !important;
  margin-top: 1px;
}

.top-nav-large {
  background-color: #FAFAFA;
  border-bottom: 1px solid #e5e1dd;
  padding: 10px;
  margin-top: 35px;
  padding-top: 15px;
}

.top-nav-large li a {
  padding-left: 0px !important;
  padding-right: 30px !important;
  font-family: 'Libre Baskerville', serif;
  font-size: 18px;
  line-height: normal;
  font-weight: bolder;
  color: #403e3b !important;
  vertical-align: center;

}

.top-nav-large img{
  margin: 10px;
}

.top-nav-large li.active{
  color: red;
}

.location-tabs {
  margin-bottom:15px;
  border-bottom: 0px;
}

.vendor-card-name {
  color: #000;
  font-family: 'Libre Baskerville', serif;
  font-weight: bolder;
}

.vendor-card-name:hover {
  color: #000;
}

.like-container {
  padding-left: 10px;
  margin-left:3px;
  border-left: 1px solid #A7A7A7;
}

.like-button {
  color: #A7A7A7;
}

.like-button-container {
  top: -50px;
  height: 1px;
  text-align: right;
}

.beLocal-btn-default {
  background-color: white !important;  
  border-color: #CCCCCC !important;
}

.beLocal-btn-default:hover {
  background-color: #EFEFEF !important;  
}

button:focus,button:hover,button:active {
  outline: 0px !important;
  -webkit-appearance:none;
}

.like-button:hover {
  color: #979797;
}

.like-button:focus {
  background-color: white !important;
}

.like-button-liked {
  color: #d35b3d !important;
}

textarea {
    resize: vertical;
}

.hours-picker {
  margin-bottom: 5px;
}

.closed-string {
  margin: 0px;
  font-weight: bold;
  padding-top:10px;
  padding-bottom:10px;
}

.closed-container {
  text-align: center;
}

.btn-more-details {
  margin-top: 5px;
}

.market-card-text {
  font-size: 12px;
}

html {
  position: relative;
  min-height: 100%;
  background-color: #EEEEEE;
}

body {
  /* Margin bottom by footer height */
  margin-bottom: 40px;
  background-color: #EEEEEE;  
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  /* Set the fixed height of the footer here */
/*  height: 60px;*/
  background-color: #777777;
  color: #EFEFEF;
  padding-top: 5px !important;
  padding-bottom: 40px;
}

.footer img{
  height: 50px;

}

.footerCopyright {
  position: absolute;
  bottom: 0;
  height: 30px;
  width: 100%;
  background-color: #343333;
  color: #FFFFFF;
  text-align: center;
  padding: 5px;
  border-top: 3px solid #FFFFFF !important;
}

@media (max-width: 598px) {
  .radio-inline-responsive {
    margin-left: 0px !important;
  }
}

@media (max-width: 768px) {

  .navbar-form {
    width: auto;
    padding-top: 0px;
    padding-bottom: 0px;
    margin-right: 10px;
    margin-left: 5px;
    border: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
  }
}

.radio-padding-right {
  padding-right: 15px;
}

#item-image {
  display: inline;
}

.no-bottom-margin {
  margin-bottom: 0px;
}

.no-top-margin {
  margin-top: 0px;
}

.container-md {
  text-align: right;
}

.container-trending {
  text-align: center;
}
/* ... */

